package ma.fsb.sgrh.entity;

public enum Role {
    ADMIN,
    RH,
    EMPLOYE
}
