package ma.fsb.sgrh.entity;

public enum StatutConge {
    EN_ATTENTE,
    VALIDE,
    REFUSE
}
