package ma.fsb.sgrh.entity;

public enum TypeConge {
    ANNUEL,
    MALADIE,
    SANS_SOLDE
}
