@startuml Classes

hide circle
skinparam backgroundColor #FFFFFF
skinparam class {
  BackgroundColor #D6E8F7
  BorderColor #1A3A5C
  HeaderBackgroundColor #1A3A5C
  FontColor #1A3A5C
  FontName Arial
  FontSize 12
  AttributeFontName Arial
  AttributeFontSize 11
  AttributeFontColor #2C2C2C
  HeaderFontColor #FFFFFF
  HeaderFontSize 13
  HeaderFontStyle bold
}
skinparam ArrowColor #1A3A5C
skinparam ArrowThickness 1.5
skinparam shadowing false
skinparam classAttributeIconSize 0

title Diagramme de Classes — Système RH Intelligent

' ── Énumérations ─────────────────────────

enum Role {
  ADMIN
  RH
  EMPLOYE
}

enum StatutConge {
  EN_ATTENTE
  VALIDE
  REFUSE
}

enum TypeConge {
  ANNUEL
  MALADIE
  SANS_SOLDE
}

' ── Classe abstraite ─────────────────────

abstract class Utilisateur {
  id : Long
  email : String
  motDePasse : String
  role : Role
  actif : Boolean
}

' ── Classes principales ───────────────────

class Employe {
  matricule : String
  nom : String
  prenom : String
  poste : String
  departement : String
  salaire : Double
  soldeConge : Integer
}

class Conge {
  id : Long
  dateDebut : LocalDate
  dateFin : LocalDate
  nbJours : Integer
  type : TypeConge
  statut : StatutConge
  motif : String
}

class Presence {
  id : Long
  date : LocalDate
  heureArrivee : LocalTime
  heureDepart : LocalTime
  estEnRetard : Boolean
}

class FichePaie {
  id : Long
  mois : Integer
  annee : Integer
  salaireBase : Double
  salaireNet : Double
}

class Document {
  id : Long
  nomFichier : String
  typeDocument : String
  texteExtrait : String
  statut : String
}

class Anomalie {
  id : Long
  scoreIsolation : Double
  typeAnomalie : String
  niveauRisque : String
  dateDetection : LocalDateTime
}

' ── Héritage ─────────────────────────────
Utilisateur <|-- Employe

' ── Associations ─────────────────────────
Employe "1" --> "0..*" Conge     : soumet
Employe "1" --> "0..*" Presence  : enregistre
Employe "1" --> "0..*" FichePaie : reçoit
Employe "1" --> "0..*" Document  : uploade
Employe "1" --> "0..*" Anomalie  : concerné par

' ── Liens énumérations ───────────────────
Conge --> StatutConge
Conge --> TypeConge
Utilisateur --> Role

@enduml
